- The units inch, mm and pt are now (really) supported for paper/slide width/height and page borders

Reggie, 31.1.1999:
------------------
- After playing a screen presentation it was not possible to actiavate embedded parts - I fixed that.

Reggie, 3.2.1999:
-----------------
- Some fixes and cleanups in the dialogs

Reggie, 7.2.1999:
-----------------
- Fixed strange problems when inserting pages in a presentation with embedded objects
- Added a small demo presentation with an embedded part (KSpread table)

Reggie, 28.1.1999:
------------------
- Optimized speed of moving objects in screenpresentations.
  Now this is much smoother than before (even on high resolutions)

Reggie, 2.3 - 6.3 1999:
-----------------------
- Porting to Qt 2.0 and lots of fixes for that

Reggie, 10.3.1999:
------------------
- Fixed focus problems

Reggie, 23.3.1999:
------------------
- Fix to avoid segfaults on exit when a textobject is activated

Reggie, 29.3.1999:
------------------
- Fixed a bug with drawing line begins and ends (arrows, circles, etc.)
  of quite thick lines - it's still not perfect but much better now.

Reggie, 2.4.1999:
-----------------
- KPresenter uses now keyCompression

Reggie, 6.4.1999:
-----------------
- Started with Drag'n'Drop:
  - If a picture is dropped into a KPresenter Page, a pixmap object
    with the dropped picture is inserted into the presentation
  - If a text is dropped into a KPresenter Page, a text object
    with the dropped text is inserted into the presentation
  - If a url (list of urls) is dropped into a KPresenter page,
    KPresenter tries to open the urls (image/* mimetypes are opened
    as pixmap objects, all others are opened as textobjects at the moment)

Reggie, 8.4.1999:
-----------------
- When saving text '>' and '<' are converted to &gt; and &lt;

Reggie, 9.4.1999:
-----------------
- Added a new effect for changes pages in screenpresentations
  (Now pages can fly away :-)

Reggie, 10.4.1999:
------------------
- Cleanups